# LangChain-chatbot-with-RAG

./: .gitignore  README.md  app.py  example.env  pyproject.toml
src/: chat_bot.py  config.py  data_loader.py  database.py  models.py  rag.py
